# spotdlQt

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
